<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ecust说话人识别</string>
    <string name="action_settings">设置</string>
    <string name="hello_world">Hello world!</string>
    <string name="s_UserSetting">用户设置</string>
    <string name="s_Train">训练</string>
    <string name="s_SecurityLevel">安全等级</string>
    <string name="s_StartService">启用服务</string>
    <string name="s_CloseService">关闭服务</string>
    <string name="s_TrainText">训练文本</string>
    <string name="s_TrainCommand">训练口令</string>
    <string name="s_HighLevel">高</string>
    <string name="s_MediumLevel">中</string>
    <string name="s_LowLevel">低</string>
    <string name="s_AddUser">添加普通用户</string>
    <string name="s_DeleteUser">删除普通用户</string>
    <string name="s_ModifyPassword">修改密码</string>
    <string name="s_Login">登陆</string>
    <string name="s_User">账号</string>
    <string name="s_PasswordOld">原密码</string>
    <string name="s_PasswordNew">新密码</string>
    <string name="s_Password">密码</string>
    <string name="s_PasswordComfirm">密码确认</string>
    <string name="s_StartRecord">开始录音</string>
    <string name="s_StopRecord">停止录音</string>
    <string name="s_Tips">提示:请开始录音</string>
    <string name="s_StartAuthenticate">开始认证</string>
    <string name="s_StopAuthenticate">结束认证</string>
    <string name="s_AppLock">软件保护</string>
    <string name="s_Test">测试</string>
    <string name="s_AvoidUnstall">防止卸载</string>
    <string name="s_SelectMusic">音效选择</string>
    <string name="s_settingsPreferences">com.example.innovation.settings</string>
    <string name="s_settingsPasswordKey">com.example.innovation.password</string>
    <string name="s_settingsSecuity">com.example.innovation.security</string>
    
    <string name="sSto">未开始录音</string>
    <string name="sSta">正在录音</string>
    
    <string name="s_Main_Train_Text">
	《月迹》原文\n\n
	贾平凹\n\n
	我们这些孩子，什么都觉得新鲜，常常又什么都觉得不满足；中秋的夜里，我们在院子里盼着月亮，好久却不见出来，便坐回中堂里，放了竹窗帘儿闷着，缠奶奶说故事。奶奶是会说故事的；说了一个，还要再说一个……奶奶突然说：“月亮进来了！”  \n\n
	我们看时，那竹窗帘儿里，果然有了月亮，款款地，悄没声儿地溜进来，出现在窗前的穿衣镜上了：原来月亮是长了腿的，爬着那竹帘格儿，先是一个白道儿，再是半圆，渐渐地爬得高了，穿衣镜上的圆便满盈了。我们都高兴起来，又都屏气儿不出，生怕那是个尘影儿变的，会一口气吹跑呢。月亮还在竹帘儿上爬，那满圆却慢慢儿又亏了，缺了；末了，便全没了踪迹，只留下一个空镜，一个失望。奶奶说：“它走了，它是多多的；你们快出去寻月吧。” \n\n 
	我们就都跑出门去，它果然就在院子里，但再也不是那么一个满满的圆了，进院了的白光，是玉玉的，银银的，灯光也没有这般儿亮的。院子中央处，是那棵粗粗的桂树，疏疏的枝，疏疏的叶，桂花还没有开，却有了累累的骨朵儿了。我们都走近去，不知道那个满圆儿去哪儿了。却疑心这骨朵儿是繁星儿变的；抬头看着天空，星儿似乎就比平日少了许多。月 亮正在头顶，明显大多了，也圆多了，清清晰晰看见里边有了什么东西。  \n\n
	“奶奶，那月上是什么呢？”我问。  \n\n
	“是树，孩子。”奶奶说。  \n\n
	“什么树呢？”  \n\n
	“桂树。”  \n\n
	我们都面面相觑了，倏忽间，哪儿好像有了一种气息，就在我们身后袅袅，到了头发梢儿上，添了一种淡淡的痒痒的感觉；似乎我们已在了月里，那月桂分明就是我们身后的这一棵了。\n\n  
	奶奶瞧着我们，就笑了：  \n\n
	“傻孩子，那里边已经有人了呢。”\n\n  
	“谁？”我们都吃惊了。  \n\n
	“嫦娥。”奶奶说。  \n\n
	“嫦娥是谁？”  \n\n
	“一个女子。” 哦，一个女子。我想。月亮里，地该是银铺的，墙该是玉砌的：那么好个地方，配住的一定是十分漂亮的女子了。\n\n  
	“有三妹漂亮吗？”  \n\n
	“和三妹一样漂亮的。”  \n\n
	三妹就乐了：  \n\n
	“啊啊，月亮是属于我的了！”\n\n  
	三妹是我们中最漂亮的，我们都羡慕起来。看着她的狂样儿，心里却有了一股儿的嫉妒。\n\n  
	我们便争执了起来，每个人都说月亮是属于自己的。奶奶从屋里端了一壶甜酒出来，给我们每人倒了一小杯儿，说：“孩子们，你们瞧瞧你们的酒杯，你们都有一个月亮哩！”\n\n  
	我们都看着那杯酒，果真里边就浮起一个小小的月亮的满圆。捧着，一动不动的，手刚一动，它便酥酥地颤，使人可怜儿的样子。大家都喝下肚去，月亮就在每一个人的心里了。 奶奶说：“月亮是每个人的，它并没有走，你们再去找吧。”\n\n  
	我们越发觉得奇了，便在院里找起来。妙极了，它真没有走去，我们很快不在葡萄叶儿上，磁花盆儿上，爷爷的锨刃儿上发现了。我们来了兴趣，竟寻出了院门。  \n\n
	院门外，便是一条小河。河水细细的，却漫着一大片的净沙；全没白日那么的粗糙，灿灿地闪着银光，柔柔和和地像水面了。我们从沙滩上跑过去，弟弟刚站到河的上湾，就大呼小叫了：\n\n  
	“月亮在这儿！”  \n\n
	妹妹几乎同时在下湾喊道： “月亮在这儿！”\n\n  
	我两处去看了，两处的水里都有月亮，沿着河沿跑，而且哪一处的水里都有月亮了。我们都看起天上，我突然又在弟弟妹妹的眼睛里看见了小小的月亮。我想，我的眼睛里也一定是会有的。噢，月亮竟是这么多的：只要你愿意，它就有了哩。\n\n  
	我们就坐在沙滩上，掬着沙儿，瞧那光辉，我说：  \n\n
	“你们说，月亮是个什么呢？”  \n\n
	“月亮是我所要的。”弟弟说。  \n\n
	“月亮是个好。”妹妹说。  \n\n
	我同意他们的话。正像奶奶说的那样：它是属于我们的，每个人的。我们就又仰起头来看那天上的月亮，月亮白光光的，在天空上。我突然觉得，我们有了月亮，那无边无际的天空也是我们的了：那月亮不是我们按在天空上的印章吗？ 大家都觉得满足了，身子也来了困意，就坐在沙滩上，相依相偎地甜甜地睡了一会儿。\n\n 
    </string>
    
</resources>
