<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >


    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/s_PasswordOld"/>
    
    <EditText
        android:id="@+id/editText_PasswordOld"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" >
        <requestFocus />
    </EditText>

    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/s_PasswordNew"/>
    
    <EditText
        android:id="@+id/editText_PasswordNew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/s_PasswordComfirm"/>
    
    <EditText
        android:id="@+id/editText_Password_Comfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />
    
    <Button 
        android:id="@+id/b_ModifyPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/s_ModifyPassword"/>

</LinearLayout>